RESOLVED FIXED241615
REGRESSION (iOS 16): Find on Page highlights shift after entering Split View
https://bugs.webkit.org/show_bug.cgi?id=241615
Summary REGRESSION (iOS 16): Find on Page highlights shift after entering Split View
Aditya Keerthi
Reported 2022-06-14 14:48:54 PDT
...
Attachments
Aditya Keerthi
Comment 1 2022-06-14 14:49:16 PDT
Aditya Keerthi
Comment 2 2022-06-14 14:58:44 PDT
EWS
Comment 3 2022-06-15 10:00:15 PDT
Committed r295563 (251568@main): <https://commits.webkit.org/251568@main> Reviewed commits have been landed. Closing PR #1521 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.