REGRESSION (iOS 16): Find on Page highlights shift after entering Split View https://bugs.webkit.org/show_bug.cgi?id=241615 rdar://94795621

Reviewed by Wenson Hsieh.

When entering Split View, the find overlay layer and the highlighted range
should be redrawn to reflect changes in layout.

* Source/WebKit/WebProcess/WebPage/WebFoundTextRangeController.cpp:
(WebKit::WebFoundTextRangeController::decorateTextRangeWithStyle):
(WebKit::WebFoundTextRangeController::redraw):
(WebKit::WebFoundTextRangeController::setTextIndicatorWithRange):

Factor out text indicator creation into a common method.

* Source/WebKit/WebProcess/WebPage/WebFoundTextRangeController.h:
* Source/WebKit/WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::mainFrameDidLayout):

Redraw decorated ranges after layout.

Canonical link: https://commits.webkit.org/251568@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@295563 268f45cc-cd09-0410-ab3c-d52691b4dbfc